# secp256k1

./: Makefile.am  README.md  configure.ac  readme.txt
study/: Makefile.am  readme.txt  sign.c  sign1.c  sign2.c  test.c
study_cpp/: Makefile.am  sign2.cpp  sign3.cpp  utilstrencodings.h
